# relay

./: Cargo.toml  README.md  relay.toml
crates/relay-analytics/: Cargo.toml
crates/relay-analytics/src/: analytics.rs  analytics_context.rs  analytics_error.rs  isolates.rs  lib.rs
crates/relay-analytics/src/isolates/: analytics_service.rs
crates/relay-analytics/src/isolates/analytics_service/: analytics_events.rs  analytics_master.rs
crates/relay-analytics/tests/: 000_template.rs
crates/relay-auth/: Cargo.toml  README.md
crates/relay-auth/src/: auth_provider.rs  auth_provider_config.rs  auth_secret_provider.rs  errors.rs  events.rs  infrastructure.rs  lib.rs  relay_auth.rs  relay_auth_config.rs  relay_auth_error.rs  relay_auth_events.rs  relay_hasher.rs
crates/relay-auth/src/events/: auth_event.rs
crates/relay-auth/src/infrastructure/: hasher.rs  mocks.rs  validator.rs
crates/relay-client/: Cargo.toml
crates/relay-client/sample/: Cargo.toml
crates/relay-client/src/: client.rs  client_typed.rs  errors.rs  infrastructure.rs  lib.rs  master.rs  master_relay.rs  master_typed.rs  options.rs  relay_serializer.rs
crates/relay-client/src/errors/: relay_error.rs
crates/relay-client/src/infrastructure/: auth_helper.rs  backend.rs  managed_connection.rs  relay_event.rs  testing.rs  transaction_manager.rs
crates/relay-client/src/infrastructure/backend/: mock_backend.rs  websocket_backend.rs
crates/relay-client/src/infrastructure/transaction_manager/: transaction_manager_inner.rs
crates/relay-core/: Cargo.toml
crates/relay-core/src/: events.rs  infrastructure.rs  isolates.rs  lib.rs  model.rs
crates/relay-core/src/events/: client_event.rs  master_event.rs
crates/relay-core/src/infrastructure/: services.rs
crates/relay-core/src/infrastructure/services/: session_manager.rs
crates/relay-core/src/infrastructure/services/session_manager/: session_manager_error.rs
crates/relay-core/src/isolates/: client.rs  master.rs
crates/relay-core/src/isolates/master/: master_state.rs
crates/relay-core/src/model/: external_error.rs  master_metadata.rs
crates/relay-logging/: Cargo.toml
crates/relay-logging/src/: lib.rs  relay_event_logger.rs  relay_log_config.rs  relay_log_entry.rs  relay_log_format.rs  relay_logger.rs
src/: infrastructure.rs  lib.rs  server.rs  testing.rs
src/events/: client_event.rs  master_event.rs
src/infrastructure/: relay_logger.rs  relay_test_harness.rs
src/infrastructure/services/: session_manager.rs
src/infrastructure/services/session_manager/: session_manager_error.rs  session_manager_inner.rs
src/isolates/: client.rs  master.rs
src/isolates/client/: client_state.rs
src/isolates/master/: master_state.rs
src/model/: client_metadata.rs  external_error.rs  master_metadata.rs
src/server/: server_auth.rs  server_config.rs  server_connection.rs  server_connection_factory.rs  server_error.rs
src/testing/: relay_test_harness.rs
tests/: 000_template.rs  001_connect_master_and_clients.rs  002_send_messages.rs  003_disconnect_client.rs  004_disconnect_master.rs  005_master_too_many_clients.rs  006_send_unsolicited_from_master.rs
