[package]
name = "relay"
version = "0.1.0"
authors = ["Douglas Linder <linderd@iinet.net.au>"]
edition = "2018"

[lib]
name = "relay"
path = "src/lib.rs"

[[bin]]
name = "relay"
path = "bin/relay.rs"

[[bin]]
name = "relay-schema"
path = "bin/relay-schema.rs"

[dependencies]
rust-isolate = {  git = "https://github.com/shadowmint/rust-isolate", branch = "master"}
base-logging = {  git = "https://github.com/shadowmint/rust-base-logging", branch = "master"}
names = "0.10.0"
uuid = {version = "0.7", features = ["v4"]}
crossbeam = "0.7.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"
ws = "0.7"
getopts = "0.2"