[package]
name = "relay"
version = "0.1.0"
authors = ["Douglas Linder <linderd@iinet.net.au>"]
edition = "2018"

[lib]
name = "relay"
path = "src/lib.rs"

[[bin]]
name = "relay"
path = "bin/relay.rs"

[[bin]]
name = "relay-schema"
path = "bin/relay-schema.rs"

[dependencies]
toml = "0.4"
ws = "0.9"
getopts = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam = "0.7.3"
chrono = "0.4"
data-encoding = "2.1.2"
rust-isolate = { git = "https://github.com/shadowmint/rust-isolate", tag = "1.0.0"}
relay-core = { path = "crates/relay-core" }
relay-logging = { path = "crates/relay-logging" }
relay-analytics = { path = "crates/relay-analytics" }
relay-auth = { path = "crates/relay-auth" }
