[package]
name = "relay-analytics"
version = "0.1.0"
authors = ["Douglas Linder <linderd@iinet.net.au>"]
edition = "2018"

[dependencies]
base-logging = {  git = "https://github.com/shadowmint/rust-base-logging", branch = "master"}
rust-isolate = {  git = "https://github.com/shadowmint/rust-isolate", tag = "1.0.0"}
relay-logging = { path = "../relay-logging" }
futures = "0.1"
crossbeam = "0.7.1"
regex = "1"
