[package]
name = "relay-auth"
version = "0.1.0"
authors = ["Douglas Linder <linderd@iinet.net.au>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
relay-core = { path = "../relay-core" }
relay-logging = { path = "../relay-logging" }
sha2 = "0.8"
chrono = "0.4"