[package]
name = "relay-client"
version = "0.1.0"
authors = ["Douglas Linder <linderd@iinet.net.au>"]
edition = "2018"

[[bin]]
name = "echo-server"
path = "bin/echo-server.rs"

[[bin]]
name = "echo-client"
path = "bin/echo-client.rs"

[dependencies]
relay-core = { path = "../relay-core" }
relay-auth = { path = "../relay-auth" }
ws = "0.9"
getopts = "0.2"
crossbeam = "0.7.1"
futures = "0.1"
tokio= "0.1"
chrono = "0.4"
uuid = { version = "0.7", features = ["v4"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }