[package]
name = "relay-core"
version = "0.1.0"
authors = ["Douglas Linder <linderd@iinet.net.au>"]
edition = "2018"

[dependencies]
rust-isolate = {  git = "https://github.com/shadowmint/rust-isolate", tag = "0.2.0"}
base-logging = {  git = "https://github.com/shadowmint/rust-base-logging", branch = "master"}
relay-logging = { path = "../relay-logging" }
relay-analytics = { path = "../relay-analytics" }
names = "0.10.0"
uuid = {version = "0.7", features = ["v4"]}
crossbeam = "0.7.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }